--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = C:\Users\ayush\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0
 include-system-site-packages = false
 version = 3.11.9
-executable = C:\Users\ayush\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\python.exe
-command = C:\Users\ayush\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\python.exe -m venv c:\Users\ayush\OneDrive\Desktop\credit_card\.venv
+executable = C:\Users\ayush\OneDrive\Desktop\credit_card\venv\Scripts\python.exe
+command = C:\Users\ayush\OneDrive\Desktop\credit_card\venv\Scripts\python.exe -m venv C:\Users\ayush\OneDrive\Desktop\credit_card\venv
